# light-db-studio.rs

./: Cargo.toml  README.md
src/: main.rs  sql.rs  web.rs
