[package]
name = "lightdbstudiors"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dotenv = "0.15.0"
futures = "0.3.31"
sqlx = { version = "0.8.6", features = ["macros", "postgres", "runtime-tokio", "runtime-tokio-native-tls"] }
tokio = { version = "1.48.0", features = ["full"] }
