[package]
name = "lightdbstudiors"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytes = "1.10.1"
dotenv = "0.15.0"
futures = "0.3.31"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["full", "http1", "server"] }
hyper-util = { version = "0.1.17", features = ["full"] }
sqlx = { version = "0.8.6", features = ["macros", "postgres", "runtime-tokio", "runtime-tokio-native-tls"] }
tokio = { version = "1.48.0", features = ["full"] }
